--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -24,7 +24,7 @@
         align-items: center;
         padding: 1rem;
         list-style: none;
-        height: calc(var(--header-height) + 1rem);
+        height: calc(var(--header-height));
         border-bottom: 1px solid var(--dark-300);
         color: var(--grey-500);
     }
@@ -38,6 +38,7 @@
         padding: 1rem;
         height: var(--header-height);
         border-bottom: 1px solid var(--dark-300);
+        z-index: inherit;
 
         span {
             display: flex;
@@ -75,7 +76,7 @@
             display: flex;
             flex-direction: column;
             justify-content: space-between;
-            height: 2.8rem;
+            height: 2.5rem;
 
             &--24change {
                 display: flex;
